--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorBarBackground">#5169a7</color>
 
     <color name="colorUploadButton">#5169a7</color>
+    <color name="colorReviewButton">#5169a7</color>
 
     <color name="orange">#FA0</color>
     <color name="white">#FFF</color>
