--- a/app/src/main/res/layout/fragment_upload_tabs.xml
+++ b/app/src/main/res/layout/fragment_upload_tabs.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:background="@color/material_blue_grey_800"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/colorUploadButton"
+        app:tabIndicatorColor="@color/white"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/colorUploadButton"
-        app:tabTextColor="@color/white" />
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="@color/colorUploadButton" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_upload"
