--- a/app/src/main/res/layout/photo_item_review_user.xml
+++ b/app/src/main/res/layout/photo_item_review_user.xml
@@ -24,6 +24,7 @@
             android:layout_toRightOf="@+id/photo_item_review_user_header_image_avatar"
             android:paddingBottom="2dp"
             android:paddingTop="@dimen/photo_item_view_text_user_padding"
+            android:maxLines="1"
             android:text="@string/user"
             android:textColor="@android:color/black"
             android:textStyle="bold" />
@@ -38,13 +39,6 @@
             android:text="@string/time"
             android:textSize="@dimen/photo_item_view_text_detail_padding" />
 
-        <ImageView
-            android:id="@+id/photo_item_review_user_header_image_remove"
-            android:layout_width="@dimen/photo_item_view_header_height"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/photo_item_view_image_love_padding"
-            android:src="@drawable/ic_header_remove" />
 
     </RelativeLayout>
 
